# src/users/users.routes.config.ts
@@ -3,7 +3,7 @@ import CommonRoutesConfig from '../common/common.routes.config';
 import {db_config} from "../config/db.config";
 import UserRepository from "./user.repository";
 import {HttpStatuses} from "../constants/HttpStatuses";
-import {NOT_FOUND_MESSAGE} from "../constants/ErrorMessages";
+import {NOT_FOUND_MESSAGE, SUCCESS_CREATED_MESSAGE} from "../constants/HttpStatusMessages";
 
 const pgp = require('pg-promise')();
 const db = pgp(db_config);
@@ -21,6 +21,24 @@ class UsersRoutes extends CommonRoutesConfig {
         this.userRepository.all()
           .then(data => res.json(data));
       })
+      .post((req: express.Request, res: express.Response) => {
+        const {id, name, surname, birthdate, profession} = req.body;
+        this.userRepository.add(id, name, surname, birthdate, profession)
+          .then(() => {
+            res.status(HttpStatuses.Created);
+            res.json({
+              code: HttpStatuses.Created,
+              message: SUCCESS_CREATED_MESSAGE
+            })
+          })
+          .catch(error => {
+            res.status(HttpStatuses.BadRequest);
+            res.json({
+              code: HttpStatuses.BadRequest,
+              message: error.message
+            });
+          })
+      });
 
     await this.app.route(`/api/v1/users/:userId`)
       .get((req: express.Request, res: express.Response) => {
